Restore position: relative to the #contentFrame element, which fixes various layout bugs. - Closes #286

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -115,6 +115,7 @@ ul, ol {
   }
 
   #contentFrame {
+    position: relative;
     padding-top: $barLg;
     overflow-y: scroll;
     height: calc(100% - #{$bar});
